# TopFileSize

./: .gitignore  CMakeLists.txt  README.md  build.bat
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  CoarseConcurrentHeap.hpp  DirectoryTree.cpp  DirectoryTree.hpp  FileExplorer.cpp  FileExplorer.hpp  FileIterator.cpp  FileIterator.hpp  FileSizeHelper.hpp  FineConcurrentHeap.hpp  Heap.hpp  TopFileSize.cpp  TopFileSize.hpp
test/: CMakeLists.txt  DirectoryTreeTest.cpp  FileIteratorTest.cpp  HeapTest.cpp  IteratorTest.cpp  TreeBuilderTest.cpp  TreeUpdateTest.cpp  data.txt
